CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
PROJECT(ASTAR)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}/include
${PROJECT_SOURCE_DIR}/third_party/googletest
)

ADD_LIBRARY(astar
${PROJECT_SOURCE_DIR}/src/Model.cpp
${PROJECT_SOURCE_DIR}/src/Util.cpp
)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
# ADD_COMPILE_OPTIONS("-fsanitize=address")
# LINK_LIBRARIES("-fsanitize=address")
# SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g3 -ggdb")

ADD_EXECUTABLE(simple_astar ${PROJECT_SOURCE_DIR}/tests/simple.cpp)
ADD_EXECUTABLE(random_astar ${PROJECT_SOURCE_DIR}/tests/random.cpp)
TARGET_LINK_LIBRARIES(simple_astar astar)
TARGET_LINK_LIBRARIES(random_astar astar)

ADD_EXECUTABLE(test_astar ${PROJECT_SOURCE_DIR}/tests/gtest.cpp)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/googletest)
TARGET_LINK_LIBRARIES(test_astar libgtest.a libgtest_main.a pthread astar)



